--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <head>
 <title>OKTik</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" type="image/x-icon" href="../photos/OKTikLogo 3.png">
+<link rel="icon" type="image/x-icon" href="../photos/logo/favicon.ico">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css" integrity="sha512-nSomje7hTV0g6A5X/lEZq8koYb5XZtrWD7GU2+aIJD35CePx89oxSM+S7k3hqNSpHajFbtmrjavZFxSEfl6pQA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -42,7 +43,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="slide-inner slide-bg-image" data-background="../photos/hero/01.png">
-                <div class="container">
+                <div class="container_hero">
                   <div data-swiper-parallax="300" class="slide-title">
                     <h2>Masters of Microsoft 365<br> 
                         tenant-to-tenant migrations</h2>
@@ -64,7 +65,7 @@
             </div>
             <div class="swiper-slide">
               <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png">
-                <div class="container">
+                <div class="container_hero">
                   <div data-swiper-parallax="300" class="slide-title">
                     <img src="../photos/slider OneTik Logo 1.png" alt="">
                   </div>
@@ -87,7 +88,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="slide-inner slide-bg-image" data-background="../photos/hero/03.png">
-                  <div class="container">
+                  <div class="container_hero">
                     <div data-swiper-parallax="300" class="slide-title">
                         <img src="../photos/slider OneTik Logo 1.png" alt="">
                     </div>
@@ -108,7 +109,7 @@
               </div>
             <div class="swiper-slide">
                 <div class="slide-inner slide-bg-image" data-background="../photos/hero/04.png">
-                  <div class="container">
+                  <div class="container_hero">
                     <div data-swiper-parallax="300" class="slide-title">
                         <img src="../photos/slider OneTik Logo 1.png" alt="">
                     </div>
@@ -129,7 +130,7 @@
               </div>
             <div class="swiper-slide">
                 <div class="slide-inner slide-bg-image" data-background="../photos/hero/05.png">
-                  <div class="container">
+                  <div class="container_hero">
                     <div data-swiper-parallax="300" class="slide-title">
                      <img src="../photos/slider OneTik Logo 1.png" alt="">
                     </div>
@@ -722,7 +723,7 @@ visit the office
     </section >
     <section id="experience" class="customer section">
         <div class="container">
-            <div class="card text-center">
+            <div class="card text-left">
                 <div class="row">
                     <div class="col subheading text-uppercase">
                         <h1>User experience</h1>
@@ -756,7 +757,7 @@ visit the office
                 <div class="row">
                     <div class="col">
                         <div class="row">
-                            <div class="col">
+                            <div class="col ">
                                 <img src="../photos/u1.png" alt="OKTik" class="skills-img">
                             </div>
                         </div>
@@ -785,6 +786,16 @@ visit the office
                     <h3 class="subheading text-uppercase">A real end user example of a failed upgrade</h3>
                     <div class="row_space_in"></div>
                     <div class="inner-card-container">
+                        <div class="img-card" >
+                            <picture>
+                                <source srcset="../photos/gifs/OKTik-Site-Advert-Mobile.gif" media="(max-width: 600px)">
+                                <source srcset="../photos/gifs/OKTik-Site-Advert-Desktop.gif" media="(max-width: 1500px)">
+                                <img src="../photos/gifs/OKTik-Site-Advert-Desktop.gif" alt="">
+                              </picture>
+                        </div>
+                        
+                    </div>
+                    <!-- <div class="inner-card-container">
                         <div class="card blue-card " style="background-image: linear-gradient(#174887, #062E62);">
                             <div class="inner-blue-card">
                                 <h1 class="text-uppercase">Bill’s been saving all his<span> MOST IMPORTANT</span> files in a special 
@@ -805,8 +816,7 @@ visit the office
                                 <img class="desktop" src="../photos/Desktop.png" alt="OKTik">
                             </div> 
                         </div>
-                    </div>
-                    
+                    </div> -->
                     
                 </div>
                 <div class="col-2 side_text_style d_side_">
@@ -863,7 +873,7 @@ visit the office
                         <div class="col-10">
                             <h4>Coca-Cola European Partners build a single digital workforce</h4>
                             <p>Flexibility is the key to adapting in a disruptive business environment and CCEP, the largest independent Coca-Cola bottler, is leading the way with a digital, mobile workforce…</p>
-                            <button class="side-button">read more</button>
+                            <a href="https://www.raconteur.net/sponsored/coca-cola-european-partners-build-a-single-digital-workforce" class="side-button">read more</a>
                         </div>
                     </div>
                     <div class="row smart-card">
@@ -873,7 +883,7 @@ visit the office
                         <div class="col-10">
                             <h4>Boutique beats big in the digital workplace</h4>
                             <p>Enterprises are racing to embrace the digital workplace, but the traditional route of engaging large IT consultancies is not driving the transformation needed to get there…</p>
-                            <button class="side-button">read more</button>
+                            <a href="https://www.raconteur.net/sponsored/boutique-beats-big-in-the-digital-workplace" class="side-button">read more</a>
                         </div>
                     </div>
                     <div class="row smart-card">
@@ -883,7 +893,7 @@ visit the office
                         <div class="col-10">
                             <h4>OKTIK: The ‘Masters of Migration’ look to Crayon for growth</h4>
                             <p>OKTIK successfully automated the technology integration of 50,000 Coca-Cola employees and has now partnered with Crayon to make its ONETIK migration platform accessible to a broader range of organizations.</p>
-                            <button class="side-button">read more</button>
+                            <a href="https://www.crayon.com/channel-partner/resources/partner-stories/oktik/" class="side-button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -915,10 +925,12 @@ visit the office
     <section id="study" class="study section">
         <div class="container">
             <div class="row">
-                <div class="col-7 subheading text-uppercase next_cola">
+                <div class="col-9 subheading text-uppercase next_cola">
                     <h1>Customer case study</h1>
                 </div>
-                <div class="col-5"><img class="COCA-COLA" src="../photos/logo/cocacola logo.png" alt="COCA-COLA"></div>
+                <div class="col-3">
+                    <img class="COCA-COLA" src="../photos/logo/cocacola logo.png" alt="COCA-COLA">
+                </div>
             </div>
             <div class="row_space_in"></div>
             <div class="row ">
