--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="slide-inner slide-bg-image" data-background="../photos/hero/01.png">
+              <div class="slide-inner slide-bg-image" data-background="../photos/hero/01.png" data-background-mobile="../photos/hero/01Mobile.png">
                 <div class="container_hero">
                   <div data-swiper-parallax="300" class="slide-title">
                     <h2>Masters of Microsoft 365<br> 
@@ -64,7 +64,7 @@
               <!-- end slide-inner -->
             </div>
             <div class="swiper-slide">
-              <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png">
+              <div class="slide-inner slide-bg-image" data-background="../photos/hero/02.png" data-background-mobile="../photos/hero/02Mobile.png">
                 <div class="container_hero">
                   <div data-swiper-parallax="300" class="slide-title">
                     <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -87,7 +87,7 @@
               <!-- end slide-inner -->
             </div>
             <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/03.png">
+                <div class="slide-inner slide-bg-image" data-background="../photos/hero/03.png" data-background-mobile="../photos/hero/03Mobile.png">
                   <div class="container_hero">
                     <div data-swiper-parallax="300" class="slide-title">
                         <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -108,7 +108,7 @@
                 <!-- end slide-inner -->
               </div>
             <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/04.png">
+                <div class="slide-inner slide-bg-image" data-background="../photos/hero/04.png" data-background-mobile="../photos/hero/04Mobile.png">
                   <div class="container_hero">
                     <div data-swiper-parallax="300" class="slide-title">
                         <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -129,7 +129,7 @@
                 <!-- end slide-inner -->
               </div>
             <div class="swiper-slide">
-                <div class="slide-inner slide-bg-image" data-background="../photos/hero/05.png">
+                <div class="slide-inner slide-bg-image" data-background="../photos/hero/05.png" data-background-mobile="../photos/hero/05Mobile.png">
                   <div class="container_hero">
                     <div data-swiper-parallax="300" class="slide-title">
                      <img src="../photos/slider OneTik Logo 1.png" alt="">
@@ -791,7 +791,7 @@ visit the office
                                 <source srcset="../photos/gifs/OKTik-Site-Advert-Mobile.gif" media="(max-width: 600px)">
                                 <source srcset="../photos/gifs/OKTik-Site-Advert-Desktop.gif" media="(max-width: 1500px)">
                                 <img src="../photos/gifs/OKTik-Site-Advert-Desktop.gif" alt="">
-                              </picture>
+                            </picture>
                         </div>
                         
                     </div>
@@ -1026,7 +1026,7 @@ visit the office
     <div class="footer-container">
         <div class="row">
             <div class="col">
-                <img src="../photos/logo/OKTik Logo Final_OKTik White Logo.svg" alt="OKTik" style="float:left;width: 400px;margin-top: 20px;";>
+                <img src="../photos/logo/OKTik Logo Final_OKTik White Logo.svg" alt="OKTik" >
             </div>
             <div class="col">
                 <div class="row text-align-left">
