--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,9 +55,9 @@
                   </div>
                   <div class="clearfix"></div>
                   <div data-swiper-parallax="500" class="slide-btns">
-                    <button type="button" class="btn btn-primary btn-lg shiny-button">
+                    <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
                         <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -78,9 +78,9 @@
                   </div>
                   <div class="clearfix"></div>
                   <div data-swiper-parallax="500" class="slide-btns">
-                    <button type="button" class="btn btn-primary btn-lg shiny-button">
+                    <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
                         <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -99,9 +99,9 @@
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <button type="button" class="btn btn-primary btn-lg shiny-button">
+                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
                             <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                        </button>
+                        </a>
                     </div>
                   </div>
                 </div>
@@ -120,9 +120,9 @@
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <button type="button" class="btn btn-primary btn-lg shiny-button">
+                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg shiny-button">
                             <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                        </button>
+                        </a>
                     </div>
                   </div>
                 </div>
@@ -141,9 +141,9 @@
                     </div>
                     <div class="clearfix"></div>
                     <div data-swiper-parallax="500" class="slide-btns">
-                        <button type="button" class="btn btn-primary btn-lg">
+                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="btn btn-primary btn-lg">
                             <img src="../photos/OKTik button.png" alt="OKTik">Available on Azure Marketplace
-                        </button>
+                        </a>
                     </div>
                     
                   </div>
