--- a/views/index.ejs
+++ b/views/index.ejs
@@ -851,7 +851,7 @@ visit the office
             <div class="row_space"></div>
             <div class="row video_card">
                 <div class="col">
-                    <img src="../photos/video.png" alt="OKTik">
+                    <iframe src="https://www.youtube.com/embed/e4aSs8VaTAI?si=h_2QBV-IKAsv18zU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
