--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,10 @@
   --side_text_color: #000;
 
 }
+iframe{
+  width: 100%;
+  height:790px;
+}
 .shiny-button{
   width: fit-content;
   position: relative;
